feat: advanced middleware handler
Signed-off-by: Aaron Teo <aaron.teo1@ibm.com>

--- a/config.yaml
+++ b/config.yaml
@@ -11,5 +11,5 @@ greeting_message: |
   - Discord (go.riv-alumni.com/discord)
   - WhatsApp Group Chat (go.riv-alumni.com/whatsapp)
 
-  _You are receiving this message because you requested for assistance. You will be connected with a RIVA Representative._
+  _You are receiving this message because you contacted us. You will be connected with a RIVA Representative._
 
