chore: update greeting message
Signed-off-by: Aaron Teo <aaron.teo1@ibm.com>

--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ greeting_cooldown: 12
 greeting_message: |
   *[RIVA] An automatic reply from RIVABot*
 
-  Hi there, I am RIVABot! Thank you for contacting the Rivervale Primary School Alumni Association (RIVA) Community Outreach Team. I have notified a representative of your message and will be replying you as soon as possible.
+  Hi there, I am RIVABot! Thank you for contacting the Rivervale Primary School Alumni Association (RIVA) Community Outreach Team. We will reply you as soon as possible.
 
   In the mean time, are you following our socials?
   - Instagram (@riv.alumni)
