--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Build
-        id: zig_go_build
+      - name: Setup Zig
+        id: zig_setup
         uses: mlugg/setup-zig@v2
+
+      - name: Build
+        id: go_build
         run: |
           CGO_ENABLED=1 \
             CGO_LDFLAGS="-static" \
