--- a/config.yaml
+++ b/config.yaml
@@ -16,5 +16,8 @@ greeting_message: |
   - Discord (go.riv-alumni.com/discord)
   - WhatsApp Group Chat (go.riv-alumni.com/whatsapp)
 
+  Are you looking to participate in new events?
+  1. Q3/4 Interest Gathering Form - https://go.riv-alumni.com/interest
+
   _You are receiving this message because you contacted us. You will be connected with a RIVA Representative._
 
